feat: add login and register

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
 ADDR=":3000"
 ENV="dev"
+DB_ADDR="postgres://root:password@localhost:5432/xed?sslmode=disable"
+GOOSE_DRIVER=postgres
+GOOSE_DBSTRING=postgres://postgres:password@localhost:5432/mydb
+GOOSE_MIGRATION_DIR=./migrations
+ACCESS_SECRET=
+REFRESH_SECRET=
