--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ GOOSE_DBSTRING=postgres://postgres:password@localhost:5432/mydb
 GOOSE_MIGRATION_DIR=./migrations
 ACCESS_SECRET=
 REFRESH_SECRET=
+R2_BUCKET_NAME=
+R2_ACCOUNT_ID=
+R2_ACCESS_KEY_ID=
+R2_ACCESS_KEY_SECRET=
